--- a/HotspotKit/HotspotKit.csproj
+++ b/HotspotKit/HotspotKit.csproj
@@ -29,6 +29,7 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2"/>
+        <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
     </ItemGroup>
 </Project>
